Mise en place de l'interface de connexion à la BDD

--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block title
-    title Bienvenue sur le serveur de métrique
+    title Basalt Serveur Supervision
 
 block body
     nav.navbar.navbar-expand-lg
