--- a/serveur/views/homepage.html
+++ b/serveur/views/homepage.html
@@ -9,14 +9,24 @@
 </head>
 <body>
 
+    <div id="rectangle"></div>
+    
     <div id="center-text">
         <div id="menu" >
-            <h1 id="stats">Statistiques</h1>
-            <h1 id="reseaux">Réseau</h1>
+            <a href="#"><h1 id="stats">Statistiques</h1></a>
+            <a href="#"><h1 id="reseaux">Réseau</h1></a>
         </div>
-        <div id="line"></div>
-        <h2 id="enseirb">ENSEIRB-MATMECA</h2>
+        <hr class="line">    
+        <h2 id="enseirb">ENSEIRB-MATMECA.</h2>
     </div>
+    <div id="triangle-code"></div>
+
+    <img id="brush" src="../images/brush.png" alt="brush">
+    <img id="moon1" src="../images/moon.png" alt="moon">
+    <img id="moon2" src="../images/moon.png" alt="moon">
+
+    <div id="left-side"><h1 id="basalt_left"><span>BASALT APP</span></h1></div>
+    <div id="right-side"><h1 id="basalt_right"><span>BASALT APP</span></h1></div>
     
     
 </body>
