--- a/serveur/style/homepage.css
+++ b/serveur/style/homepage.css
@@ -6,9 +6,6 @@ body{
     overflow-x: hidden; /* Hide horizontal scrollbar */
     margin: 0; /* pour éviter les marges */
     padding: 0;
-    background-image: url(../images/background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 
@@ -18,7 +15,15 @@ h1, h2, h3, p{
     margin: 0;
 }   
 
-
+#background{
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    z-index: -4;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 /* style for center-text */
 
@@ -44,16 +49,16 @@ h1, h2, h3, p{
 
 #stats{
     margin-right: 60px;
-    font-size: 280%;
+    font-size: 3.5vw;
 }
 
 #reseaux{
     margin-left: 20px;
-    font-size: 280%;
+    font-size: 3.5vw;
 }
 
 #enseirb{
-    font-size: 130%;
+    font-size: 1.7vw;
 }
 
 /* left side */
@@ -100,7 +105,7 @@ a:hover{
     border-right : 300px solid transparent;
     border-left : 700px solid transparent;
     top: 222px;
-    left: 150px;
+    left: 180px;
 }
 
 #brush{
@@ -128,15 +133,13 @@ a:hover{
 
 #rectangle {
     z-index: -3;
-    position: relative;
-    width: 97%;
-    height: 696px;
-    top: 20px;
-    left: 20px;
+    position: fixed;
+    width: 96vw;
+    height: 95vh;
+    top: 3%;
+    left: 2%;
 
-    background: white;
-    background-image: url(../images/vintage.png);
-    background-repeat: no-repeat;
+    background: white no-repeat;
     background-size: cover;
   }
    
