commit before merge

--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -1,14 +1,10 @@
 extends layout
 
+
+block head
+    link(href='../style/homepage.css' rel="stylesheet")
 block title
     title Basalt Serveur Supervision
-
+    
 block body
-    nav.navbar.navbar-expand-lg
-        .container-fluid
-            a.navbar-brand
-            a.position.navbar-brand Network Supervisor
-
-            button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarNavAltMarkup', aria-controls='navbarNavAltMarkup', aria-expanded='false', aria-label='Toggle navigation')
-                span.navbar-toggler-icon
-            #navbarNavAltMarkup.collapse.navbar-collapse
+    h1 toto le rigolo
