--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -1,11 +1,8 @@
 extends layout
 
-
-block head
-    link(href='../style/homepage.css' rel="stylesheet")
 block title
     title Basalt Serveur Supervision
-    
+
 block body
     div
         img#background(src="/images/background.jpg")
@@ -19,4 +16,4 @@ block body
                 h1#reseaux Réseau
         hr.line
         h2#enseirb ENSEIRB-MATMECA
-    // #triangle-code
+    #triangle-code
