--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -17,3 +17,7 @@ block body
         hr.line
         h2#enseirb ENSEIRB-MATMECA
     #triangle-code
+
+    div
+        img#moon1(src="/images/moon.png")
+        img#moon2(src="/images/moon.png")
