Homepage sans les noeuds

--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -19,5 +19,11 @@ block body
     #triangle-code
 
     div
+        img#brush(src="/images/brush.png")
         img#moon1(src="/images/moon.png")
         img#moon2(src="/images/moon.png")
+
+    #left-side
+        h1#basalt_left BASALT APP
+    #right-side
+        h1#basalt_right BASALT APP
