Block style pour séparer les différents css

--- a/serveur/views/layout.pug
+++ b/serveur/views/layout.pug
@@ -5,8 +5,7 @@ html(lang="fr")
             meta(charset='utf-8')
             meta(name='viewport', content='width=device-width, initial-scale=1')
             meta(name='description', content='')
-            style
-                include ../style/homepage.css
+            block style
         block title
             title Titre standard
     body
