--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -1,5 +1,9 @@
 extends layout
 
+block style
+    style
+        include ../style/homepage.css
+
 block title
     title Basalt Serveur Supervision
 
@@ -10,9 +14,9 @@ block body
 
     #center-text
         #menu
-            a(href="#")
+            a(href="stats")
                 h1#stats Statistiques
-            a(href="#")
+            a(href="network")
                 h1#reseaux Réseau
         hr.line
         h2#enseirb ENSEIRB-MATMECA
