Pb avec les noeuds

--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -9,7 +9,20 @@ block title
 
 block body 
 
-
     div
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
+
+    #container
+    
+    <script>
+        //anychart.onDocumentReady(function () {
+        //    anychart.data.loadJsonFile("pathtojson", function (data) {
+        //        var chart = anychart.graph(data);
+        //        chart.title("Network Graph showing Basalt protocol");
+        //        chart.container("container").draw();
+        //    });
+        //})  
+    </script>
+    <script src="https://cdn.anychart.com/releases/8.8.0/js/anychart-core.min.js"></script>
+    <script src="https://cdn.anychart.com/releases/8.8.0/js/anychart-graph.min.js"></script>
