commit before merge

--- a/serveur/views/homepage.pug
+++ b/serveur/views/homepage.pug
@@ -10,7 +10,7 @@ block body
 
     #center-text
         #menu
-            a(href="#")
+            a(href="stats")
                 h1#stats Statistiques
             a(href="#")
                 h1#reseaux Réseau
@@ -29,7 +29,6 @@ block body
         h1#basalt_right BASALT APP
         
     div 
-        #particles-js.background
-    script(src='/particles.js')
-    script(src='/particles.min.js')
-    script(src='/app.js')
+        #particles-js
+
+    
