--- a/serveur/views/layout.pug
+++ b/serveur/views/layout.pug
@@ -7,7 +7,13 @@ html(lang="fr")
             meta(name='description', content='')
             style
                 include ../style/homepage.css
+            
         block title
             title Titre standard
+
+    script(src='particles.js')
+    script(src='particles.min.js')
+    script(src='app.js')
+
     body
         block body
