Affichage des noeuds avec particules.js

--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -13,8 +13,7 @@ block body
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
 
-    #container
-    <script src="https://cdn.anychart.com/releases/8.8.0/js/anychart-core.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.8.0/js/anychart-graph.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.8.0/js/anychart-data-adapter.min.js"></script>
-    script(src='networkGraph.js')
+    #particles-js.background
+    script(src='/particles.js')
+    script(src='/particles.min.js')
+    script(src='/app.js')
