--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -13,7 +13,5 @@ block body
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
 
-    #particles-js.background
-    script(src='/particles.js')
-    script(src='/particles.min.js')
-    script(src='/app.js')
+    canvas#particles-js
+    script(src='particlesNetwork.js')
