--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -13,5 +13,9 @@ block body
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
 
+    #popup 
+        p In a pop up div
+
     canvas#particles-js
     script(src='particlesNetwork.js')
+    script(src="networkInfo.js")
