--- a/serveur/style/network.css
+++ b/serveur/style/network.css
@@ -27,13 +27,10 @@ body {
     background-size: cover;
 }
 
-#container{
-    position: absolute;
-    width: calc(100vw - 40px);
-    height: calc(100vh - 40px);
-    top: 20px;
-    left: 20px;   
+canvas {
+    display: block;
 }
+
 
 #particles-js {
     position: absolute;
@@ -41,4 +38,17 @@ body {
     height: calc(100vh - 40px);
     top: 20px;
     left: 20px;
-  }
+}
+
+#popup{
+    position: absolute;
+    top: 30px;
+    left:30px;
+    height: 200px;
+    width: 300px;
+    display: none;
+    background-image: url(/images/background.jpg);
+    opacity: 80%;
+    border-radius: 10%;
+    color: white;
+}
