--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -2,7 +2,9 @@ extends layout
 
 block style
     style
-        include ../style/stats.css        
+        include ../style/stats.css   
+        link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
+     
 block title
     title Basalt Serveur Supervision
 
@@ -12,25 +14,45 @@ block body
         a(href="accueil")
             h3 Accueil
 
+        
+
+      
+
     h1#title Statistiques Basalt APP
 
     h1#basalt_left BASALT APP
 
     div#screen
         canvas#graph1 
+        div#myNav.overlay
+            a.closebtn(href='javascript:void(0)' onclick='closeNav()') &times;
+            .overlay-content
+                a.overlay_a(href='#') Nombre de noeuds
+                input.tentacles(type='number' name='tentacles' min='1' max='100')
+                a.overlay_b(href='#') Taille de la vue 
+                input.tentacles(type='number' name='tentacles' min='2' max='6')
+                a.overlay_c(href='#') Nombre de noeuds malicieux 
+                input.tentacles(type='number' name='tentacles' min='1' max='100')
+
+        span#sub_header(onclick='openNav()')
+            h1#open Ouvrir les options  
+
+    
 
     div#nodes 
-        h1 Noeud numéro 1
+        h1 Noeud numéro : 
         div.containeur
             table
                 tr
-                    td Age
+                    td 
+                        b Age
                     td 12
                     td 14
                     td 2
                     td 12
                 tr
-                    td Vue
+                    td 
+                        b Vue
                     td N1
                     td N4
                     td N18
@@ -40,10 +62,11 @@ block body
         
     
 
-    div#but
-        button#prev noeud précédent
-        button#global Statistiques globales
-        button#next  noeud suivant
+    div#cont
+        div#but
+            button#prev noeud précédent
+            button#global Statistiques globales
+            button#next  noeud suivant
 
 
 
@@ -52,3 +75,4 @@ block body
 
     script(src='https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js')
     script(src='graphs.js')
+    
