Network : affichage d'un popup lors d'un hover sur des noeuds

--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -13,7 +13,7 @@ block body
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
 
-    #popup 
+    .popup 
         p In a pop up div
 
     canvas#particles-js
