--- a/serveur/style/stats.css
+++ b/serveur/style/stats.css
@@ -184,7 +184,7 @@ span {
 }
 
 
-.overlay a {
+.myForm > label {
     padding: 8px;
     text-decoration: none;
     font-size: 36px;
@@ -193,6 +193,12 @@ span {
     transition: 0.3s; 
 }
 
+#submit{
+    background-color: transparent;
+    color: white;
+    width: 450px;
+    font-size: 26px;
+}
 
 /*.overlay a:hover, .overlay a:focus {
     color: #f1f1f1;
