--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -8,10 +8,21 @@ block title
     title Basalt Serveur Supervision
 
 block body 
-
     div
         img#background(src="/images/background.jpg")
         img#rectangle(src="/images/vintage.png")
+
+    .topNav
+        #topNavLeft 
+            a
+                h3 Précédent
+        #headerTitle 
+            h3 BASALT APP
+        #topNavRight 
+            a(href="accueil")
+                h3#accueil Accueil
+            a(href="stats")
+                h3#reseaux Statistiques
 
     .popup 
         p In a pop up div
