--- a/serveur/views/network.pug
+++ b/serveur/views/network.pug
@@ -25,7 +25,9 @@ block body
                 h3#reseaux Statistiques
 
     .popup 
-        p In a pop up div
+        #popupQuit X 
+        p#popupTitle 
+        p#popupInfo 
 
     canvas#particles-js
     script(src='particlesNetwork.js')
