--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -3,8 +3,7 @@ extends layout
 block style
     style
         include ../style/stats.css   
-        link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
-     
+        include ../style/charts.min.css
 block title
     title Basalt Serveur Supervision
 
@@ -49,10 +48,14 @@ block body
         span#sub_header(onclick='openNav()')
             h1#open Ouvrir les options  
 
-    
+
+    span#sub_chart(onclick='openChart()')
+        h1#openChart Changer de graphique  
+
+    div#chart
 
     div#nodes 
-        h1 Noeud numéro : 
+        h1 Noeud : 
         div.containeur
             table
                 tr
@@ -87,4 +90,5 @@ block body
 
     script(src='https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js')
     script(src='graphs.js')
+ 
     
