--- a/serveur/style/network.css
+++ b/serveur/style/network.css
@@ -89,7 +89,6 @@ canvas {
 }
 
 #popupTitle{
-    display: fixed;
     justify-content: center;
     align-items: center;
     font-size: 200%;
@@ -98,8 +97,7 @@ canvas {
 }
 
 #popupInfo{
-    display: flex;
-    justify-content: center;
+    text-align: center;
     font-size: 100%;
 }
 
@@ -114,16 +112,49 @@ canvas {
 }
 
 table
-{
-    position: absolute;
+{   
+    position: absolute flex;
     border-collapse: collapse;
     display: inline !important;
-    left: 20%;
+    margin-left:auto; 
+    margin-right:auto;
+}
+
+tr{
+    text-align: center;
 }
 
 td{
     border: 1px solid white;
     padding: 10px;
     font-size: 100%;
-    justify-content: center;
+    text-align: center;
+}
+
+#view{
+    display: none;
+    overflow-x:auto;
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: calc(100vw - 40px);
+    height: calc(100vh - 60px);
+    top: 40px;
+    left: 20px;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 2;
+}
+
+.lessData{
+    display: none;
+}
+
+@media (max-width: 824px) {
+/*     #topNavRight a {
+        float: none;
+        display: block;
+        text-align: left;
+      } */
 }
