--- a/serveur/style/network.css
+++ b/serveur/style/network.css
@@ -62,7 +62,6 @@ body {
 
 canvas {
     display: block;
-    border: 1px solid black;
 }
 
 
@@ -143,8 +142,61 @@ td{
     height: calc(100vh - 60px);
     top: 40px;
     left: 20px;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.8);
     z-index: 2;
+    color: white;
+}
+
+.infectTitle{
+    margin: 2%;
+    text-align: center;
+    width:30%;
+}
+.chartBox{
+    display: flex;
+}
+
+.chartBox,
+.highcharts-data-table table {
+    float: left;
+    width: 600px;
+    margin: 0 auto;
+}
+
+.highcharts-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts-data-table td,
+.highcharts-data-table th,
+.highcharts-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts-data-table thead tr,
+.highcharts-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts-data-table tr:hover {
+    background: #f1f7ff;
 }
 
 .lessData{
