--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -160,7 +160,7 @@ block body
                 ipAddress.append(nameNode[0].allNode[index].nodeID.port);
                 ipAddress.style.display = 'inline';
                 title.append(ipAddress)
-            }    
+            }
             //- changeTitle = 0;
         }
 
@@ -173,14 +173,14 @@ block body
         const Data = []; // general data
 
         let changed = 0;
-        
+
         async function createTableForNodes(){
             await getDataForPieCharts();
 
             const father = document.getElementById('subfather')
             let tab = document.createElement("table");
             tab.setAttribute("id","monTab");
-            father.append(tab); 
+            father.append(tab);
 
             let tr1 = document.createElement('tr');
             tab.append(tr1);
@@ -197,7 +197,7 @@ block body
             td2.append('Vue')
 
             const vueLength = Data[0].allNode[index].vue.length;
-            
+
             for (let pas = 0; pas < vueLength; pas++) {
                 console.log(Data[0])
                 let td2 = document.createElement('td');
@@ -205,7 +205,7 @@ block body
                 let seed = Data[0].allNode[index].vue[pas].seed.toString()
                 console.log(typeof(seed))
                 td2.append(seed.slice(0,2))
-                
+
                 let td3 = document.createElement('td');
                 td3.style.fontSize = 10
                 tr2.append(td3);
@@ -221,7 +221,7 @@ block body
                 document.getElementById("monTab").remove()
         }
 
-        
+
         
 
 
@@ -251,16 +251,16 @@ block body
             mainDiv.style.display = "none";
             nodes.style.display = 'block';
             buttonBar.style.margin = "105px";
-            
-            
+
+
             deleteTableForNodes();
 
-            changedTitle = 1; // const to know if function was applied 
+            changedTitle = 1; // const to know if function was applied
             createTitleNodes();
 
             createTableForNodes();
-        } 
-            index = index+1; 
+        }
+            index = index+1;
         })
 
         prev.addEventListener("click", () => {
@@ -270,12 +270,12 @@ block body
             nodes.style.display = 'block';
             buttonBar.style.marginTop = "105px";
 
-            changedTitle = 1; // const to know if function was applied 
+            changedTitle = 1; // const to know if function was applied
             createTitleNodes();
 
             deleteTableForNodes();
             createTableForNodes();
-        
+
             } 
             index = index-1;
         })
@@ -363,18 +363,16 @@ block body
 
         async function getData(){
             const query = await fetch('/nodeData');
-            const res = await query.text();
-            const data = JSON.parse(res);
+            const data = await query.json();
             nameNode.push(data);
             Data.push(data)
-            //- const data = await query.json();
         };
         
 
         async function getDataForPieCharts(){
             const query = await fetch('/statsData');
             const data = await query.json();
-            const dataToPush = [data.nbSains, data.nbMalicieux];
+            const dataToPush = [data.nbMalicieux,data.nbSains];
             pushData1.push(dataToPush);
             pushData2.push(dataToPush);
         };
