Pie chart actualisation

--- a/serveur/views/stats.pug
+++ b/serveur/views/stats.pug
@@ -377,5 +377,7 @@ block body
             pushData2.push(dataToPush);
         };
         
+        setInterval(getDataForPieCharts, 1000)
+        
  
     
